# PulseBoard

./: CLAUDE.md  bootstrap.py  start.bat  start.sh
pulsefeed/backend/: auth.py  database.py  logging_config.py  main.py  models.py  pyproject.toml  schemas.py
pulsefeed/backend/agents/: feed_personalizer.py
pulsefeed/backend/content/: fetcher.py  pipeline.py
pulsefeed/backend/llm/: __init__.py  engine.py  model_manager.py
pulsefeed/backend/routes/: events.py  feed.py  system.py  users.py
pulsefeed/backend/security/: __init__.py  rate_limiter.py  sanitize.py
pulsefeed/frontend/: index.html  package-lock.json  package.json
pulsefeed/frontend/src/: App.jsx  config.js
pulsefeed/frontend/src/components/: DashboardLayout.jsx
pulsefeed/frontend/src/lib/: validation.js
pulsefeed/frontend/src/pages/: Onboarding.jsx  Settings.jsx
