[project]
name = "pulsefeed"
version = "3.0.0"
description = "PulseFeed — local-first AI news feed powered by llama.cpp"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    # Database + ORM
    "sqlalchemy>=2.0.0",
    # Auth
    "python-jose[cryptography]>=3.5.0",
    # Content fetching
    "duckduckgo-search>=7.0.0",
    "httpx>=0.27",
    # LLM — CPU baseline; bootstrap.py upgrades to Metal/CUDA wheel if GPU detected
    "llama-cpp-python>=0.3.0",
    # Utilities
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "apscheduler>=3.10.0",
    "psutil>=6.0.0",
]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "mypy>=1.14.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
